--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name = "settings_toast">You clicked on settings</string>
+    <string name = "volume_control">Volume Control!</string>
     <string name="title_activity_settings">SettingsActivity</string>
 
     <string name="settings_strings">These are the settings!</string>
